# android-lowlatency-audio

./: .gitignore  .gitmodules  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/lowlatencyaudio/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  IRenderableAudio.h  Oscillator.h  native-lib.cpp
app/src/main/java/com/example/lowlatencyaudio/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/lowlatencyaudio/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
